--- a/doozer/requirements.txt
+++ b/doozer/requirements.txt
@@ -24,3 +24,4 @@ setuptools>=70.0.0 # not directly required, pinned by Snyk to avoid a vulnerabil
 aiohttp
 jira==3.4.1
 ghapi
+zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
